2009-07-10  Adam Roben  <aroben@apple.com>

        Sort all our Xcode projects

        Accomplished using sort-Xcode-project-file.

        Requested by Dave Kilzer.

        * NetscapeCocoaPlugin/NetscapeCocoaPlugin.xcodeproj/project.pbxproj:
        * NetscapeCoreAnimationMoviePlugin/NetscapeCoreAnimationMoviePlugin.xcodeproj/project.pbxproj:
        * NetscapeCoreAnimationPlugin/NetscapeCoreAnimationPlugin.xcodeproj/project.pbxproj:

2009-06-15  Anders Carlsson  <andersca@apple.com>

        Reviewed by Kevin Decker.

        Add Core Animation movie plug-in example.
        
        * NetscapeCoreAnimationMoviePlugin: Added.
        * NetscapeCoreAnimationMoviePlugin/English.lproj: Added.
        * NetscapeCoreAnimationMoviePlugin/English.lproj/InfoPlist.strings: Added.
        * NetscapeCoreAnimationMoviePlugin/Info.plist: Added.
        * NetscapeCoreAnimationMoviePlugin/MovieControllerLayer.h: Added.
        * NetscapeCoreAnimationMoviePlugin/MovieControllerLayer.m: Added.
        (createImageNamed):
        (-[MovieControllerLayer init]):
        (-[MovieControllerLayer dealloc]):
        (-[MovieControllerLayer _playPauseButtonRect]):
        (-[MovieControllerLayer _sliderRect]):
        (-[MovieControllerLayer _sliderThumbRect]):
        (-[MovieControllerLayer _innerSliderRect]):
        (-[MovieControllerLayer _drawPlayPauseButtonInContext:]):
        (-[MovieControllerLayer _drawSliderInContext:]):
        (-[MovieControllerLayer drawInContext:]):
        (-[MovieControllerLayer _currentTime]):
        (-[MovieControllerLayer _duration]):
        (-[MovieControllerLayer _isPlaying]):
        (-[MovieControllerLayer _updateTime:]):
        (-[MovieControllerLayer _rateDidChange:]):
        (-[MovieControllerLayer _timeDidChange:]):
        (-[MovieControllerLayer actionForKey:]):
        (-[MovieControllerLayer setMovie:]):
        (-[MovieControllerLayer _setNewTimeForThumbCenterX:]):
        (-[MovieControllerLayer handleMouseDown:]):