@@ -207,11 +207,11 @@ void NPP_Print(NPP instance, NPPrint* platformPrint)
 
 }
 
-static void handleDraw(PluginObject* obj)
+static void handleDraw(PluginObject* obj, NPCocoaEvent *event)
 {
     NSGraphicsContext *oldContext = [[NSGraphicsContext currentContext] retain];
     
-    NSGraphicsContext *context = [NSGraphicsContext graphicsContextWithGraphicsPort:((NP_CGContext*)obj->window.window)->context
+    NSGraphicsContext *context = [NSGraphicsContext graphicsContextWithGraphicsPort:event->data.draw.context
                                                                             flipped:YES];
 
 
@@ -356,7 +356,7 @@ int16 NPP_HandleEvent(NPP instance, void* event)
     
     switch (cocoaEvent->type) {
         case NPCocoaEventDrawRect:
-            handleDraw(obj);
+            handleDraw(obj, cocoaEvent);
             return 1;
         case NPCocoaEventFocusChanged:
             handleFocusChanged(cocoaEvent, obj);
