@@ -1,3 +1,13 @@
+2010-03-02  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Kevin Decker.
+
+        NPWindow is now null in the Cocoa event model.
+
+        * NetscapeInputMethodPlugin/main.m:
+        (handleDraw):
+        (NPP_HandleEvent):
+
 2009-07-10  Adam Roben  <aroben@apple.com>
 
         Sort all our Xcode projects
